aggiunto lettura scrittura con DB, da terminare sistemazione lettura data rispetto fuso orario

--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,10 @@
 
 
         <div class="content">
-            <button class="bButton red" id="regEnt" onclick="register('enter')">
+            <button class="bButton red" id="regEnt" onclick="newRegistration('enter')">
                 Registra</br>entrata
             </button>
-            <button class="bButton green" id="regExit" onclick="register('exit')">
+            <button class="bButton green" id="regExit" onclick="newRegistration('exit')">
                 Registra</br>uscita
             </button>
             <!-- <button class="bButton blue" id="regFin" onclick="register('final')">
