aggiunta possibilità scaricare file csv con tutti i dati salvati

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
                 <i class="material-icons dateRefreshOff" id="dateRefresh" onclick="dateRefresh()">autorenew</i>
                 <p id="date">[date]</p>
                 <p id="tapToEdit" onclick="editDataStart()">Tocca per cambiare giorno</p>
+                <p id="tapToDownload" onclick="downloadAll()">Tocca per creare file</p>
             </div>
 
 
